[project]
name = "pyvlcb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "José Parera Bermúdez", email = "jose.parera@upm.es" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pyvlcb = "pyvlcb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
